--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha "
+    "test": "mocha ",
+    "coverage":"nyc --reporter=lcov --reporter=text npm run test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^9.0.3"
+    "mocha": "^9.0.3",
+    "nock": "^13.1.1"
   },
   "dependencies": {
     "chai": "^4.3.4",
-    "sinon": "^11.1.2"
+    "chai-as-promised": "^7.1.1",
+    "sinon": "^11.1.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
